--- a/index.html
+++ b/index.html
@@ -56,26 +56,25 @@
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="#9333ea" style="margin-bottom:8px;">
             <path d="M96 96c0-35.3 28.7-64 64-64l288 0c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L80 480c-44.2 0-80-35.8-80-80L0 128c0-17.7 14.3-32 32-32s32 14.3 32 32l0 272c0 8.8 7.2 16 16 16s16-7.2 16-16L96 96zm64 24l0 80c0 13.3 10.7 24 24 24l112 0c13.3 0 24-10.7 24-24l0-80c0-13.3-10.7-24-24-24L184 96c-13.3 0-24 10.7-24 24zm208-8c0 8.8 7.2 16 16 16l48 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-48 0c-8.8 0-16 7.2-16 16zm0 96c0 8.8 7.2 16 16 16l48 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-48 0c-8.8 0-16 7.2-16 16zM160 304c0 8.8 7.2 16 16 16l256 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-256 0c-8.8 0-16 7.2-16 16zm0 96c0 8.8 7.2 16 16 16l256 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-256 0c-8.8 0-16 7.2-16 16z" />
           </svg>
-          <h3>Todo mundo fala de IA. Mas quem aplica mesmo?</h3>
-          <p>A maioria só repete termos bonitos. Poucos transformam isso em resultado real.</p>
+          <h3>Linha completa para detailers</h3>
+          <p>produtos de limpeza pesada, leve, hiegienização e até conservação do seu veículo</p>
         </div>
         <div class="card" onclick="location.href='catalogo.html';" style="cursor:pointer;">
           <!-- Ícone: Relatórios com IA -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="#3b82f6" style="margin-bottom:8px;">
             <path d="M32 32c17.7 0 32 14.3 32 32l0 336c0 8.8 7.2 16 16 16l400 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L80 480c-44.2 0-80-35.8-80-80L0 64C0 46.3 14.3 32 32 32zm96 96c0-17.7 14.3-32 32-32l192 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-192 0c-17.7 0-32-14.3-32-32zm32 64l128 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 96l256 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-256 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z" />
           </svg>
-          <h3>A proposta da MIND</h3>
-          <p>A MIND traduz inteligência artificial pra sua realidade.
-Nada de soluções genéricas — aqui é aplicação sob medida, com foco no que funciona pra você.</p>
+          <h3>Lavar em casa com todo cuidado de um profissional</h3>
+          <p>Produtos prontos para que você que gosta de cuidar do seu carro no fim de semana</p>
         </div>
         <div class="card" onclick="location.href='catalogo.html';" style="cursor:pointer;">
           <!-- Ícone: Assessor de Redação -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="#ec4899" style="margin-bottom:8px;">
             <path d="M368.4 18.3L312.7 74.1 437.9 199.3l55.7-55.7c21.9-21.9 21.9-57.3 0-79.2L447.6 18.3c-21.9-21.9-57.3-21.9-79.2 0zM288 94.6l-9.2 2.8L134.7 140.6c-19.9 6-35.7 21.2-42.3 41L3.8 445.8c-3.8 11.3-1 23.9 7.3 32.4L164.7 324.7c-3-6.3-4.7-13.3-4.7-20.7c0-26.5 21.5-48 48-48s48 21.5 48 48s-21.5 48-48 48c-7.4 0-14.4-1.7-20.7-4.7L33.7 500.9c8.6 8.3 21.1 11.2 32.4 7.3l264.3-88.6c19.7-6.6 35-22.4 41-42.3l43.2-144.1 2.7-9.2L288 94.6z" />
           </svg>
-          <h3> Sem receita pronta, com engenharia sob medida</h3>
-          <p>Cada empresa é única. Cada solução, também.
-Com IA, não existe fórmula mágica. Mas com a MIND, existe método, adaptação e resultado.</p>
+          <h3>A primeira da região especifica para VEICULOS</h3>
+          <p>Alta demanda de limpeza na sua empresa? Precisa dos veículos limpos sem gastar muito?
+Aqui é o lugar correto, faça um orçamento conosco</p>
         </div>
         <div class="card" onclick="location.href='catalogo.html';" style="cursor:pointer;">
           <!-- Ícone: Assessor de Perícias -->
