--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="hero-content">
         <h1>A mais completa para seu carro</h1>
         <p>
-          Na HAS você encontra a maior variedade de produtos que toda região oeferece
+          Na HAS você encontra a maior variedade de produtos que toda região oferece
         </p>
         <a href="catalogo.html" class="cta-button">Conheça nossos produtos</a>
       </div>
@@ -81,16 +81,10 @@ Aqui é o lugar correto, faça um orçamento conosco</p>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="#9333ea" style="margin-bottom:8px;">
             <path d="M318.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-120 120c-12.5 12.5-12.5 32.8 0 45.3l16 16c12.5 12.5 32.8 12.5 45.3 0l4-4L325.4 293.4l-4 4c-12.5 12.5-12.5 32.8 0 45.3l16 16c12.5 12.5 32.8 12.5 45.3 0l120-120c12.5-12.5 12.5-32.8 0-45.3l-16-16c-12.5-12.5-32.8-12.5-45.3 0l-4 4L330.6 74.6l4-4c12.5-12.5 12.5-32.8 0-45.3l-16-16zm-152 288c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l48 48c12.5 12.5 32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-1.4-1.4L272 285.3 226.7 240 168 298.7l-1.4-1.4z" />
           </svg>
-          <h3>Quer aplicar IA de verdade no seu negócio?</h3>
-          <p>Chega de teoria. Com a MIND, você coloca pra rodar. De forma prática, segura e personalizada.</p>
+          <h3>Acessórios e instrumentos</h3>
+          <p>Exclusiva em diversos acessorios de toda região, vem conhecer a primeira loja de Cosmeticos Automotivos de Santo Antônio da Platina</p>
         </div>
         <div class="card" onclick="location.href='catalogo.html';" style="cursor:pointer;">
-          <!-- Ícone: Automação Social Media -->
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="24" height="24" fill="#3b82f6" style="margin-bottom:8px;">
-            <path d="M320 0c17.7 0 32 14.3 32 32l0 64 120 0c39.8 0 72 32.2 72 72l0 272c0 39.8-32.2 72-72 72l-304 0c-39.8 0-72-32.2-72-72l0-272c0-39.8 32.2-72 72-72l120 0 0-64c0-17.7 14.3-32 32-32zM208 384c-8.8 0-16 7.2-16 16s7.2 16 16 16l32 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-32 0zm96 0c-8.8 0-16 7.2-16 16s7.2 16 16 16l32 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-32 0zm96 0c-8.8 0-16 7.2-16 16s7.2 16 16 16l32 0c8.8 0 16-7.2 16-16s-7.2-16-16-16l-32 0zM264 256a40 40 0 1 0 -80 0 40 40 0 1 0 80 0zm152 40a40 40 0 1 0 0-80 40 40 0 1 0 0 80zM48 224l16 0 0 192-16 0c-26.5 0-48-21.5-48-48l0-96c0-26.5 21.5-48 48-48zm544 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48 48 48l-16 0 0-192 16 0z" />
-          </svg>
-          <h3>Você traz o desafio. A MIND entrega a receita.</h3>
-          <p>Tecnologia de ponta com linguagem simples, integração eficiente e impacto no seu dia a dia.</p>
         </div>
       </div>
     </section>
