--- a/contato.html
+++ b/contato.html
@@ -10,28 +10,25 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>  <!-- Navegação principal -->
-  <nav>
-    <div class="logo">
+      <nav>
+      <div class="logo">
       <a href="index.html"><img src="assets/img/logo.png" alt="Logo MIND" loading="lazy" /></a>
-    </div>
-    
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="quemsomos.html">Quem Somos</a></li>
-      <li><a href="catalogo.html">Catálogo MIND</a></li>
-      <li><a href="resultados.html">Resultados Reais</a></li>
-      <li><a href="planos.html">Planos & Soluções</a></li>
-      <li><a href="experiencia.html">Experiência IA</a></li>
-      <li><a href="contato.html">Fale Conosco</a></li>
-      <li><a href="acesso.html">Acesso Restrito</a></li>
-    </ul>
-    
-    <div class="menu-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  </nav>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="produtos.html">Produtos</a></li>
+        <li><a href="marcas.html">Marcas Parceiras</a></li>
+        <li><a href="acessorios.html">Acessórios</a></li>
+        <li><a href="nossaempresa.html">Nossa empresa</a></li>
+        <li><a href="contato.html">Fale Conosco</a></li>
+        <li><a href="acesso.html">?Acesso Restrito</a></li>
+      </ul>
+      <div class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
 
   <!-- Cabeçalho da página -->
   <section class="hero" style="background-image: url('assets/banner_header.png');">
@@ -65,16 +62,15 @@
 
   <!-- Rodapé -->
 <footer>
-  <div style="text-align: center; padding: 24px 0; color: #94a3b8; font-size: 0.875rem;">
-    <p>&copy; 2025 MIND – Marques Inteligência de Desenvolvimento</p>
-    <p>IA com propósito, ética e acessibilidade. Idealizado e desenvolvido por Samuel Marques.</p>
-    <p>
-      <a href="mailto:marquesintdesenvolvimento@gmail.com">marquesintdesenvolvimento@gmail.com</a> | 
-      <a href="https://www.instagram.com/mind_aisup" target="_blank">Instagram</a>
-      <script src="js/banner_animado.js"></script>
-    </p>
-  </div>
-</footer>
+      <div style="text-align: center; padding: 24px 0; color: #94a3b8; font-size: 0.875rem;">
+        <p>&copy; 2025 HAS – Produtos para Estética Automotiva</p>
+        <p>Valorizando seu carro do jeito que o governo valoriza no IPVA. Desenvolvido por MGA Concept.</p>
+        <p>
+          <a href="mailto:hasprodutosautomotivos@gmail.com">hasprodutosautomotivos@gmail.com</a> |
+          <a href="https://www.instagram.com/hasprodutosautomotivos/" target="_blank">Instagram</a>
+        </p>
+      </div>
+    </footer>
 
   <script src="js/script.js"></script>
 </body>
