--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Estilos globais -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
-    <meta name="description" content="A MIND oferece soluções com IA real, simples e acessível para contabilidade, direito e gestão. Conheça nossos assistentes e planos personalizados." />
+    <meta name="description" content="A HAS traz para a região a exclusividade de conhecer e adquirir produtos de Estética Automotiva de ampla variedade e altíssima qualidade. Venha conhecer nosso espaço!" />
   </head>
   <body>
     <!-- Navegação principal -->
@@ -21,11 +21,9 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
+        <li><a href="produtos.html">Produtos</a></li>
+        <li><a href="acessorios.html">Acessórios</a></li>
         <li><a href="nossaempresa.html">Nossa empresa</a></li>
-        <li><a href="catalogo.html">Catálogo HAS</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="planos.html">?Planos & Soluções</a></li>
-        <li><a href="experiencia.html">?Experiência IA</a></li>
         <li><a href="contato.html">Fale Conosco</a></li>
         <li><a href="acesso.html">?Acesso Restrito</a></li>
       </ul>
@@ -43,7 +41,7 @@
         <p>
           Na HAS você encontra a maior variedade de produtos que toda região oferece
         </p>
-        <a href="catalogo.html" class="cta-button">Conheça nossos produtos</a>
+        <a href="produtos.html" class="cta-button">Conheça nossos produtos</a>
       </div>
     </section>
 
@@ -59,7 +57,7 @@
           <h3>Linha completa para detailers</h3>
           <p>produtos de limpeza pesada, leve, hiegienização e até conservação do seu veículo</p>
         </div>
-        <div class="card" onclick="location.href='catalogo.html';" style="cursor:pointer;">
+        <div class="card" onclick="location.href='produtos.html';" style="cursor:pointer;">
           <!-- Ícone: Relatórios com IA -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="#3b82f6" style="margin-bottom:8px;">
             <path d="M32 32c17.7 0 32 14.3 32 32l0 336c0 8.8 7.2 16 16 16l400 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L80 480c-44.2 0-80-35.8-80-80L0 64C0 46.3 14.3 32 32 32zm96 96c0-17.7 14.3-32 32-32l192 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-192 0c-17.7 0-32-14.3-32-32zm32 64l128 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 96l256 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-256 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z" />
@@ -67,7 +65,7 @@
           <h3>Lavar em casa com todo cuidado de um profissional</h3>
           <p>Produtos prontos para que você que gosta de cuidar do seu carro no fim de semana</p>
         </div>
-        <div class="card" onclick="location.href='catalogo.html';" style="cursor:pointer;">
+        <div class="card" onclick="location.href='produtos.html';" style="cursor:pointer;">
           <!-- Ícone: Assessor de Redação -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="#ec4899" style="margin-bottom:8px;">
             <path d="M368.4 18.3L312.7 74.1 437.9 199.3l55.7-55.7c21.9-21.9 21.9-57.3 0-79.2L447.6 18.3c-21.9-21.9-57.3-21.9-79.2 0zM288 94.6l-9.2 2.8L134.7 140.6c-19.9 6-35.7 21.2-42.3 41L3.8 445.8c-3.8 11.3-1 23.9 7.3 32.4L164.7 324.7c-3-6.3-4.7-13.3-4.7-20.7c0-26.5 21.5-48 48-48s48 21.5 48 48s-21.5 48-48 48c-7.4 0-14.4-1.7-20.7-4.7L33.7 500.9c8.6 8.3 21.1 11.2 32.4 7.3l264.3-88.6c19.7-6.6 35-22.4 41-42.3l43.2-144.1 2.7-9.2L288 94.6z" />
@@ -76,7 +74,7 @@
           <p>Alta demanda de limpeza na sua empresa? Precisa dos veículos limpos sem gastar muito?
 Aqui é o lugar correto, faça um orçamento conosco</p>
         </div>
-        <div class="card" onclick="location.href='catalogo.html';" style="cursor:pointer;">
+        <div class="card" onclick="location.href='produtos.html';" style="cursor:pointer;">
           <!-- Ícone: Assessor de Perícias -->
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="#9333ea" style="margin-bottom:8px;">
             <path d="M318.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-120 120c-12.5 12.5-12.5 32.8 0 45.3l16 16c12.5 12.5 32.8 12.5 45.3 0l4-4L325.4 293.4l-4 4c-12.5 12.5-12.5 32.8 0 45.3l16 16c12.5 12.5 32.8 12.5 45.3 0l120-120c12.5-12.5 12.5-32.8 0-45.3l-16-16c-12.5-12.5-32.8-12.5-45.3 0l-4 4L330.6 74.6l4-4c12.5-12.5 12.5-32.8 0-45.3l-16-16zm-152 288c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l48 48c12.5 12.5 32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-1.4-1.4L272 285.3 226.7 240 168 298.7l-1.4-1.4z" />
@@ -101,8 +99,8 @@ Aqui é o lugar correto, faça um orçamento conosco</p>
         <p>&copy; 2025 HAS – Produtos para Estética Automotiva</p>
         <p>Valorizando seu carro do jeito que o governo valoriza no IPVA. Desenvolvido por MGA Concept.</p>
         <p>
-          <a href="mailto:marquesintdesenvolvimento@gmail.com">marquesintdesenvolvimento@gmail.com</a> |
-          <a href="https://www.instagram.com/mind_aisup" target="_blank">Instagram</a>
+          <a href="mailto:hasprodutosautomotivos@gmail.com">hasprodutosautomotivos@gmail.com</a> |
+          <a href="https://www.instagram.com/hasprodutosautomotivos/" target="_blank">Instagram</a>
         </p>
       </div>
     </footer>
