--- a/acessorios.html
+++ b/acessorios.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Acesso Restrito – MIND</title>
+  <title>Experiência IA – MIND</title>
   <!-- Tipografia Poppins -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,6 +20,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="produtos.html">Produtos</a></li>
+        <li><a href="marcas.html">Marcas Parceiras</a></li>
         <li><a href="acessorios.html">Acessórios</a></li>
         <li><a href="nossaempresa.html">Nossa empresa</a></li>
         <li><a href="contato.html">Fale Conosco</a></li>
@@ -35,17 +36,21 @@
   <!-- Cabeçalho da página -->
   <section class="hero" style="background-image: url('assets/img/placeholder_light_gray_block.png');">
     <div class="hero-content">
-      <h1>Acesso a plataforma integrada de agentes</h1>
-      <p>Area em desenvolvimento. </p>
+      <h1>Experiência IA</h1>
+      <p>Esta área ainda está em desenvolvimento. Em breve você poderá testar nossos assistentes personalizados.</p>
     </div>
   </section>
 
   <!-- Conteúdo de aviso ou simulação -->
   <section class="content">
-    <h2>Você também pode fazer parte dessa história</h2>
+    <h2>Simule uma Conversa</h2>
     <p style="text-align: center; color: #94a3b8; max-width: 600px; margin: 0 auto 24px;">
-      Isso é uma amostra do futuro!</p
+      A funcionalidade completa desta seção será disponibilizada em breve.</p
     </form>
+
+    <div class="response-box" id="resposta">
+      <!-- A resposta aparecerá aqui -->
+    </div>
   </section>
 
   <!-- Rodapé -->
