--- a/nossaempresa.html
+++ b/nossaempresa.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sobre a MIND</title>
+  <title>Sobre a HAS</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -11,127 +11,112 @@
 </head>
 <body>
   <!-- Navegação principal -->
-  <nav>
-    <div class="logo">
+      <nav>
+      <div class="logo">
       <a href="index.html"><img src="assets/img/logo.png" alt="Logo MIND" loading="lazy" /></a>
-    </div>
-    
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="quemsomos.html">Quem Somos</a></li>
-      <li><a href="catalogo.html">Catálogo MIND</a></li>
-      <li><a href="resultados.html">Resultados Reais</a></li>
-      <li><a href="planos.html">Planos & Soluções</a></li>
-      <li><a href="experiencia.html">Experiência IA</a></li>
-      <li><a href="contato.html">Fale Conosco</a></li>
-      <li><a href="acesso.html">Acesso Restrito</a></li>
-    </ul>
-    
-    <div class="menu-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  </nav>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="produtos.html">Produtos</a></li>
+        <li><a href="marcas.html">Marcas Parceiras</a></li>
+        <li><a href="acessorios.html">Acessórios</a></li>
+        <li><a href="nossaempresa.html">Nossa empresa</a></li>
+        <li><a href="contato.html">Fale Conosco</a></li>
+        <li><a href="acesso.html">?Acesso Restrito</a></li>
+      </ul>
+      <div class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
 
   <!-- Cabeçalho da página -->
   <section class="hero" style="background-image: url('assets/banner_header.png');">
     <div class="hero-content">
-      <h1>Sobre a MIND</h1>
+      <h1>Sobre a HAS</h1>
       <p>Descubra nossa história por trás da iniciativa e quem está construindo o futuro.</p>
     </div>
   </section>
 
   <!-- Conteúdo -->
   <section class="content">
-    <h2>Por quê existimos?</h2>
-    <p>Todo mundo falando em Inteligência Artificial… Mas pouca gente entende o que isso realmente significa na prática.
+  <!-- Por que existimos -->
+  <h2>Por que existimos?</h2>
+  <p>
+    Existimos para transformar o cuidado automotivo em uma experiência acessível e especial.
+    Nossa razão de ser é oferecer produtos selecionados, testados e aprovados, para que seu
+    veículo receba o valor e o respeito que merece.
+  </p>
+  <p>
+    Todo carro carrega uma história: o clássico repleto de memórias deve brilhar como no dia
+    em que saiu da fábrica, enquanto o zero quilômetro precisa ser protegido desde cedo para
+    que, mesmo após muitos quilômetros, siga com aparência de novo.
+  </p>
+  <p>
+    A HAS é mais do que uma loja: é um espaço imersivo para quem ama veículos impecáveis — um
+    lugar com atmosfera, conhecimento e prazer em cuidar do carro.
+  </p>
 
-A MIND existe pra entregar a IA de forma eficaz, didática e com clareza — pra qualquer área, seja você um contador, médico, advogado, empreendedor ou estudante.</p>
+  <hr>
 
-<p>A gente não tá aqui pra fazer fortuna vendendo ilusão.
-Estamos aqui pra facilitar a evolução social usando IA de verdade.
-Queremos ver gente comum usando ferramentas extraordinárias.
-Sem enrolação. Sem promessas vazias. Sem depender de ninguém..</p>
+  <!-- Quem somos -->
+  <h2>Quem somos?</h2>
+  <p>
+    Na <strong>HAS – Produtos para Estética Automotiva</strong>, cuidar do carro vai além de “deixar limpo”:
+    é preservar histórias, proteger investimentos e celebrar a paixão de dirigir.
+  </p>
+  <p>
+    Vivemos em uma região onde o carro faz parte da rotina e do sonho de muita gente. Por isso,
+    cada detalhe importa — a pintura que reflete o sol, o interior higienizado, o couro hidratado.
+    Esses cuidados aumentam durabilidade, segurança e o orgulho de estar ao volante.
+  </p>
+  <p>
+    Nossa missão é aproximar o <em>premium</em> de você: microfibras de alto padrão, shampoos especializados,
+    ceras, vitrificadores e muito mais — com curadoria e orientação prática.
+  </p>
+  <p>
+    Mais do que vender, <strong>educamos e inspiramos</strong>: mostramos a diferença entre uma lavagem comum
+    e um detalhamento completo, e como proteger a pintura contra o tempo.
+  </p>
+  <blockquote>
+    <strong>Brilho, proteção e performance</strong> em cada produto que chega às suas mãos.
+  </blockquote>
 
-    <h2>O que é a MIND?</h2>
-    <p>A MIND é a ponte entre dois mundos: o mundo real, onde pessoas e empresas enfrentam problemas diários, processos engessados e sobrecarga de trabalho — e o mundo da Inteligência Artificial, cheio de possibilidades, mas muitas vezes distante, confuso e mal explicado. O que fazemos é simples no conceito, mas poderoso no impacto: traduzimos suas necessidades para a linguagem da IA — e, ao mesmo tempo, traduzimos a IA pra que você entenda, use e se beneficie dela de forma prática.</p>
+  <hr>
 
-<p>Muita gente quer embarcar nessa nova era digital, mas a verdade é que a maioria das soluções que prometem "IA" entregam ferramentas prontas, caras e desconectadas da sua realidade. Nós escolhemos outro caminho. Escutamos de verdade. Analisamos o que realmente faz sentido no seu caso. E então desenvolvemos soluções sob medida, com clareza, responsabilidade e foco em resultado — não em modinha ou hype tecnológico.</p>
+  <!-- O que é a HAS -->
+  <h2>O que é a HAS?</h2>
+  <p>
+    Somos o ponto de encontro entre <strong>paixão</strong> e <strong>cuidado</strong> — a primeira loja
+    especializada em estética automotiva de Santo Antônio da Platina, criada para elevar o padrão local
+    e trazer para a região o que antes só se encontrava nas capitais ou em sites especializados.
+  </p>
 
-<p>Na MIND, a prioridade não é entregar “mais”.
-É entregar melhor.
-Com processos bem feitos, estruturados e pensados para funcionar de forma sustentável e transparente.
-Porque qualidade de processo é o que garante eficiência no longo prazo — e não uma avalanche de promessas vazias.</p>
+  <p><strong>A HAS representa:</strong></p>
+  <ul>
+    <li><strong>Qualidade:</strong> trabalhamos apenas com marcas reconhecidas e produtos testados.</li>
+    <li><strong>Valor:</strong> cada item ajuda a proteger, preservar e até valorizar o veículo.</li>
+    <li><strong>Atmosfera única:</strong> um ambiente pensado para o universo dos carros limpos e impecáveis.</li>
+  </ul>
 
-<p>Um detalhe fundamental que ninguém te conta é que o sucesso de uma IA depende, em boa parte, do usuário.
-Sim, da pessoa que opera, interpreta, ajusta e evolui com a ferramenta.
-É como dirigir um carro: não adianta colocar uma Ferrari nas suas mãos se você nunca aprendeu a controlar o volante.</p>
-
-<p>Por isso, aqui na MIND, não entregamos apenas sistemas prontos e torcemos pra você se virar.
-A gente faz questão de integrar a ferramenta com o conhecimento sobre ela.
-Te mostramos como usar, como ajustar, como melhorar.
-É uma jornada onde você aprende, entende, aplica e evolui — com nosso apoio constante e com uma estrutura pensada pra te dar autonomia e confiança.</p>
-
-<p>Em resumo?
-A MIND não é só uma empresa de IA.
-É uma parceira que anda do seu lado, traduzindo a complexidade, simplificando o uso e colocando tecnologia de ponta nas suas mãos — do jeito certo, no momento certo, e com a responsabilidade de quem quer ver você crescer.</p>
-
-<p>O nome MIND – Marques Inteligência de Desenvolvimento carrega a alma e origem daquilo que nos move: a conexão entre a inteligência humana e a inteligência artificial a serviço da evolução. Fundada por Samuel Marques, a MIND nasce da ideia de que, assim como a mente humana está em constante busca por respostas, compreensão e soluções, nossa missão também é conectar informações, interpretar contextos e transformar complexidade em clareza. Cada projeto da MIND reflete esse princípio: usar tecnologia com propósito, pensamento com profundidade e inteligência com direção — sempre guiados pela vontade de desenvolver pessoas, negócios e ideias.
-</p>
-
-    <h2>Quem está por trás da MIND?</h2>
-    <p>A curiosidade sempre foi meu melhor diploma.
-
-<p>Me chamo Samuel Marques, sou formado como técnico em Eletromecânica pelo Instituto Federal do Paraná, iniciei Engenharia Automotiva na UFSC e atualmente estou finalizando o curso de Administração. Ao longo do caminho, participei de eventos de startups do Sebrae — em 2016, com a AllKart, um kart para montar em família sem necessidade de ferramentas, fiquei em 3º lugar. Em 2022, fui finalista com a EPIZZO um projeto de placas modulares piezoelétricas para gerar energia limpa com o simples ato de caminhar sobre elas em eventos.</p>
-
-<p>Na UFSC, fui parte da equipe de Fórmula SAE, Formula CEM. Lá, aprendi de verdade o que é gestão, trabalho em equipe, scrum, improviso técnico e o valor de saber pedir e oferecer apoio. Foi ali que cresceu o "resolvedor de B.O" que vive em mim até hoje.</p>
-
-<p>Durante a pandemia, sem saber o que viria, mergulhei de cabeça em cursos dos mais diversos: de programação a beatmaker. Treinei meu inglês na marra, consumindo toneladas de conteúdo gringo — tanto técnico quanto de entretenimento. Tudo isso alimentado por uma chama: a vontade de entender como as coisas funcionam e criar soluções reais para o mundo.</p>
-
-<p>Hoje carrego mais de 40 ideias e projetos registrados. Alguns saíram do papel, outros esbarraram na falta de verba, outros na falta de equipe e muitos foram engavetados por insegurança. Afinal, quem era eu para explicar algo sem "formação formal"? Mas o tempo mostrou que até quem tem diploma pode falar besteira... e que a diferença real está na vivência, não só no currículo.</p>
-
-<p>A MIND nasceu disso: da união entre inteligência humana e inteligência artificial. Eu sou Samuel — e meu propósito é claro:
-
-Descomplicar a tecnologia, aplicar IA com responsabilidade e ajudar pessoas a resolver problemas reais.</p>
-
-    <h2>Faça parte da MIND</h2>
-    <p>Se você chegou até aqui, é porque algo te despertou. E não é por acaso.</p>
-
-<p>A MIND nasceu com a missão de integrar inteligência humana e artificial de forma prática, acessível e transformadora — começando por resolver problemas reais de empresas, pessoas e setores que ainda nem sabem o que é possível fazer com IA.
-
-Mas a verdade é: neste momento, a equipe da MIND é formada por uma única pessoa — o fundador.</p>
-
-<p>Isso não é fraqueza, é convite.
-
-A gente está no início de um projeto com enorme potencial de impacto e escalabilidade. E justamente por isso, estamos de portas abertas para quem quiser construir isso junto com a gente.</p>
-
-<p>Você é programador e quer contribuir com soluções inovadoras?
-É representante de um setor específico e enxerga onde a IA pode transformar sua área?
-Tem perfil de investidor ou quer se tornar um sócio estratégico de um projeto ousado, mas com os pés no chão?</p>
-
-<p>Então esse convite é pra você.
-
-Entre em contato, conte sua ideia, sua proposta, sua visão.
-Se fizer sentido para os dois lados, vamos caminhar juntos.</p>
-
-<p>Aqui não tem hierarquia engessada, nem burocracia vazia.
-Tem espaço para quem quer somar, fazer acontecer e crescer com propósito.
-
-A MIND é pequena por enquanto — mas a visão é gigante. E talvez falte só você pra ela se tornar realidade.</p>
-  </section>
+  <p>
+    Em resumo, a <strong>HAS</strong> é a casa da estética automotiva na nossa região: onde a paixão encontra
+    profissionalismo e cada carro recebe o cuidado que merece.
+  </p>
+</section>
 
   <!-- Rodapé -->
 <footer>
-  <div style="text-align: center; padding: 24px 0; color: #94a3b8; font-size: 0.875rem;">
-    <p>&copy; 2025 MIND – Marques Inteligência de Desenvolvimento</p>
-    <p>IA com propósito, ética e acessibilidade. Idealizado e desenvolvido por Samuel Marques.</p>
-    <p>
-      <a href="mailto:marquesintdesenvolvimento@gmail.com">marquesintdesenvolvimento@gmail.com</a> | 
-      <a href="https://www.instagram.com/mind_aisup" target="_blank">Instagram</a>
-    </p>
-  </div>
-</footer>
+      <div style="text-align: center; padding: 24px 0; color: #94a3b8; font-size: 0.875rem;">
+        <p>&copy; 2025 HAS – Produtos para Estética Automotiva</p>
+        <p>Valorizando seu carro do jeito que o governo valoriza no IPVA. Desenvolvido por MGA Concept.</p>
+        <p>
+          <a href="mailto:hasprodutosautomotivos@gmail.com">hasprodutosautomotivos@gmail.com</a> |
+          <a href="https://www.instagram.com/hasprodutosautomotivos/" target="_blank">Instagram</a>
+        </p>
+      </div>
+    </footer>
 
   <script src="js/script.js"></script>
   <script src="js/banner_animado.js"></script>
