--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="catalogo.html">Marcas</a></li>
+        <li><a href="marcas.html">Marcas</a></li>
         <li><a href="produtos.html">Produtos</a></li>
         <li><a href="nossaempresa.html">Quem Somos</a></li>
         <li><a href="contato.html">Fale Conosco</a></li>
