--- a/produtos.html
+++ b/produtos.html
@@ -43,7 +43,7 @@
   <h2>Assista à nossa apresentação</h2>
   <div class="video-wrapper">
     <iframe
-      src="https://www.youtube.com/watch?v=LPnkiDstwwQ"
+      src="https://www.youtube.com/embed/QOsozeTLg1c"
       title="Apresentação HAS"
       frameborder="0"
       loading="lazy"
