Fix typo in site description header

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Aqui é o lugar correto, faça um orçamento conosco</p>
 
     <!-- Seção de Projetos em Destaque (Placeholder) -->
     <section class="features" id="projetos">
-      <h2>Conheça nosso site, aqui tem nosasmostramos nosso posicionamento e identidade, marcas parceiras, tudo em um ambiente imersivo!</h2>
+      <h2>Conheça nosso site, aqui mostramos nosso posicionamento, identidade, marcas parceiras, tudo em um ambiente imersivo!</h2>
       <p style="text-align:center; color:#94a3b8;"></p>
     </section>
 
