Change heading from 'Marcas que trabalhamos' to 'Marcas parceiras'

--- a/marcas.html
+++ b/marcas.html
@@ -37,7 +37,7 @@
 
   <!-- Grade de Logos -->
   <section class="content">
-    <h2>Marcas que trabalhamos</h2>
+    <h2>Marcas parceiras</h2>
     <div class="card-grid">
       <div class="card">
         <img src="assets/marcas/marca01.png" alt="Marca 01" loading="lazy">
