--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,6 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="marcas.html">Marcas</a></li>
-        <li><a href="produtos.html">Produtos</a></li>
         <li><a href="nossaempresa.html">Quem Somos</a></li>
         <li><a href="contato.html">Fale Conosco</a></li>
       </ul>
@@ -58,7 +57,7 @@
     </p>
   </section>
 
-  <!-- Rodapé -->
+    <!-- Rodapé -->
     <footer>
       <div style="text-align: center; padding: 24px 0; color: #94a3b8; font-size: 0.875rem;">
         <p>&copy; 2025 HAS – Produtos para Estética Automotiva</p>
@@ -66,11 +65,25 @@
         <p>
           <a href="mailto:hasprodutosautomotivos@gmail.com">hasprodutosautomotivos@gmail.com</a> |
           <a href="https://www.instagram.com/hasprodutosautomotivos/" target="_blank">Instagram</a> |
-          <a href="wa.me/5543984510877" target="_blank">WhatsApp</a>
+          <a href="https://api.whatsapp.com/send/?phone=5543984510877&text&type=phone_number&app_absent=0" target="_blank">WhatsApp</a>
         </p>
       </div>
     </footer>
 
-  <script src="js/script.js"></script>
-</body>
+    <!-- Scripts -->
+    <script src="js/script.js"></script>
+    <!-- Efeito de partículas para cabeçalho e rodapé -->
+    <script src="js/banner_animado.js"></script>
+    <script>
+      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+          e.preventDefault();
+          const target = document.querySelector(this.getAttribute('href'));
+          if (target) {
+            target.scrollIntoView({ behavior: 'smooth' });
+          }
+        });
+      });
+    </script>
+  </body>
 </html>
