--- a/marcas.html
+++ b/marcas.html
@@ -38,34 +38,34 @@
   <section class="content">
     <h2>Marcas parceiras</h2>
     <div class="card-grid">
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca01.png" alt="Marca 01" loading="lazy">
       </div>
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca02.png" alt="Marca 02" loading="lazy">
       </div>
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca03.png" alt="Marca 03" loading="lazy">
       </div>
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca04.png" alt="Marca 04" loading="lazy">
       </div>
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca05.png" alt="Marca 05" loading="lazy">
       </div>
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca06.png" alt="Marca 06" loading="lazy">
       </div>
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca07.png" alt="Marca 07" loading="lazy">
       </div>
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca08.png" alt="Marca 08" loading="lazy">
       </div>
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca09.png" alt="Marca 09" loading="lazy">
       </div>
-      <div class="card">
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca10.png" alt="Marca 10" loading="lazy">
       </div>
     </div>
