Add video presentation section to nossaempresa.html
Added a video presentation section to the page.

--- a/nossaempresa.html
+++ b/nossaempresa.html
@@ -38,7 +38,20 @@
 
   <!-- Conteúdo -->
   <section class="content">
-  <!-- Por que existimos -->
+   <section id="video-apresentacao" class="video-section">
+  <h2>Assista à nossa apresentação</h2>
+  <div class="video-wrapper">
+    <iframe
+      src="https://www.youtube.com/embed/QOsozeTLg1c"
+      title="Apresentação HAS"
+      frameborder="0"
+      loading="lazy"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
+  </div>
+</section>
+    <!-- Por que existimos -->
   <h2>Por que existimos?</h2>
   <p>
     Existimos para transformar o cuidado automotivo em uma experiência acessível e especial.
