--- a/marcas.html
+++ b/marcas.html
@@ -39,7 +39,8 @@
     <h2>Marcas parceiras</h2>
     <div class="card-grid">
       <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
-        <img src="assets/marcas/has.png" alt="Marca 10" loading="lazy">
+        <img src="assets/marcas/has.png" alt="has" loading="lazy">
+      </div>
       <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca01.png" alt="Marca 01" loading="lazy">
       </div>
