Add new card for Marca 11 in marcas.html

--- a/marcas.html
+++ b/marcas.html
@@ -71,6 +71,9 @@
       <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
         <img src="assets/marcas/marca10.png" alt="Marca 10" loading="lazy">
       </div>
+      <div class="card" onclick="location.href='contato.html';" style="cursor:pointer;">
+        <img src="assets/marcas/marca11.png" alt="Marca 11" loading="lazy">
+      </div>
     </div>
   </section>
 
