--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>
           Na HAS você encontra a maior variedade de produtos que toda região oferece!
         </p>
-        <a href="produtos.html" class="cta-button">Conheça nossos produtos</a>
+        <a href="contato.html" class="cta-button">Conheça nossos produtos</a>
       </div>
     </section>
 
