Add class to submit button in contato.html

--- a/contato.html
+++ b/contato.html
@@ -49,7 +49,7 @@
       <label for="message">Mensagem</label>
       <textarea id="message" name="message" rows="5" required></textarea>
 
-      <button type="submit">Enviar</button>
+      <button type="submit" class="cta-button">Enviar</button>
     </form>
 
     <p style="text-align:center; margin-top:20px; color:#94a3b8;">
