--- a/nossaempresa.html
+++ b/nossaempresa.html
@@ -42,7 +42,7 @@
   <h2>Assista à nossa apresentação</h2>
   <div class="video-wrapper">
     <iframe
-      src="https://www.youtube.com/embed/QOsozeTLg1c"
+      src="https://www.youtube.com"
       title="Apresentação HAS"
       frameborder="0"
       loading="lazy"
