--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <!-- Seção de Projetos em Destaque (Placeholder) -->
     <section class="features" id="projetos">
-      <h2>Conheça nosso site, aqui mostramos nosso posicionamento, identidade, marcas parceiras, tudo em um ambiente imersivo!</h2>
+      <h2>Aqui você descobre quem somos, as marcas que trabalhamos e como podemos te ajudar a deixar seu carro do jeito que você gosta.</h2>
       <p style="text-align:center; color:#94a3b8;"></p>
     </section>
 
