Update hint text in catalogo.html

--- a/catalogo.html
+++ b/catalogo.html
@@ -225,7 +225,7 @@
     </div>
 
     <p class="catalog-hint">
-      //Dica: aqui você só cola links do Mercado Livre e o site puxa foto, nome e preço automaticamente.
+      //Fazemos também direto com o consumidor caso seja de interesse, entre em contato via Whatsapp 43 98451-0877
     </p>
 
     <!-- Você só lista links aqui (um por item) -->
