--- a/catalogo.html
+++ b/catalogo.html
@@ -258,7 +258,7 @@
 
  <script>
 const CATALOG_JSON_URL = "/assets/produtos/produtos.json";
-const IMAGE_BASE_PATH = "/assets/produtos/imagens";
+const IMAGE_BASE_PATH = "https://raw.githubusercontent.com/mgaconcept/has/main/assets/produtos/imagens";
 
   let originalItems = []; // ordem original do JSON (relevance)
   let renderedItems = []; // itens com imagem resolvida
