Add 'Loja Online' link to navigation menu

--- a/contato.html
+++ b/contato.html
@@ -19,6 +19,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="marcas.html">Marcas</a></li>
         <li><a href="diluicao.html">Calculadora de Diluição</a></li>
+        <li><a href="mercado.html">Loja Online</a></li>
         <li><a href="nossaempresa.html">Quem Somos</a></li>
         <li><a href="contato.html">Fale Conosco</a></li>
       </ul>
