Add GA4 user properties tracking for perfil

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 
     // opcional: registrar no GA4 (não é dado pessoal)
     if (typeof gtag === 'function') {
+      gtag('set', 'user_properties', { perfil: tipo });
       gtag('event', 'perfil_definido', { perfil: tipo });
     }
 
