--- a/diluicao.html
+++ b/diluicao.html
@@ -83,16 +83,21 @@
           <!-- Proporção -->
           <div style="display:grid; gap:10px; margin-bottom: 14px;">
             <label for="ratioInput" style="font-weight:600;">Proporção (1:X)</label>
-            <div style="display:flex; gap:10px; flex-wrap:wrap;">
-              <input
-                id="ratioInput"
-                type="text"
-                inputmode="numeric"
-                autocomplete="off"
-                placeholder="Ex: 1:60"
-                value=""
-                style="flex: 1; min-width: 220px; padding: 12px 12px; border-radius: 10px; border: 1px solid rgba(255,255,255,.18); background: rgba(0,0,0,.25); color: #fff;"
-              />
+            <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center;">
+              <div style="display:flex; align-items:center; gap:10px; flex: 1; min-width: 220px;">
+    <span style="font-weight:700; padding: 12px 0; color:#fff;">1 :</span>
+
+    <input
+      id="ratioInput"
+      type="number"
+      inputmode="numeric"
+      min="1"
+      step="1"
+      autocomplete="off"
+      placeholder="Ex: 60"
+      value=""
+      style="flex: 1; padding: 12px 12px; border-radius: 10px; border: 1px solid rgba(255,255,255,.18); background: rgba(0,0,0,.25); color: #fff;"
+    />
 
               <!-- Presets -->
               <div style="display:flex; gap:8px; flex-wrap:wrap; align-items:center;">
