--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="marcas.html">Marcas</a></li>
         <li><a href="diluicao.html">Calculadora de Diluição</a></li>
-        <li><a href="mercado.html">Loja Online</a></li>
+        <li><a href="https://www.mercadolivre.com.br/pagina/has_produtosautomotivos"target="_blank"rel="noopener noreferrer">Loja Online</a></li>
         <li><a href="nossaempresa.html">Quem Somos</a></li>
         <li><a href="contato.html">Fale Conosco</a></li>
       </ul>
