Update navigation links in marcas.html

--- a/marcas.html
+++ b/marcas.html
@@ -16,13 +16,13 @@
       <a href="index.html"><img src="assets/img/logo.png" alt="Logo HAS" loading="lazy" /></a>
     </div>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="marcas.html">Marcas</a></li>
         <li><a href="diluicao.html">Calculadora de Diluição</a></li>
-        <li><a href="mercado.html">Loja Online</a></li>
+        <li><a href="https://www.mercadolivre.com.br/pagina/has_produtosautomotivos"target="_blank"rel="noopener noreferrer">Loja Online</a></li>
         <li><a href="nossaempresa.html">Quem Somos</a></li>
         <li><a href="contato.html">Fale Conosco</a></li>
-    </ul>
+      </ul>
     <div class="menu-toggle">
       <span></span><span></span><span></span>
     </div>
